--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your site description">
+    <meta name="Lottery randomizer" content="Lottery randomizer for ITP classes, Spring 2025">
     <title>Lottery randomizer</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="header-container">
             <h1 class="header-title">Lottery randomizer</h1>
-            <p class="header-text">Not sure what classes to take? Just take your chances! What the hell...</p>
+            <p class="header-text">Not sure what classes to take? Just take your chances!</p>
         </div>
         
         <button id="random-button">Randomize course selection</button>
